add images and basic styling/content

--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IDMX 225 Midterm</title>
 
-    <!-- Link in your CSS here -->
+    <link rel="stylesheet" href="./css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tektur:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     
 <header>
-    <h1>Title</h1>
+    <h1>Net Empire: The Regime</h1>
     <section id="hero">
-        <!-- Make a spiffy hero here -->
+        <img src="img/TarTarus.png" alt="Tartarus, leader of the Regime">
+        <div>
+            <p>Tartarus:</p>
+            <p>Regime and Rus Net Admin</p>
+        </div>
    </section>
 </header>
 <main>
     
     <!-- List of Projects -->
     <section id="projects">
-        <h2>Projects</h2>
+        <h2>Created Units</h2>
         <div class="project">
-            <img src="" alt="">
+            <img src="img/cannon.png" alt="Regime C-9 Plasma Cannon">
             <div class="description">
-                <h3></h3>
+                <h3>A major upgrade from the C-8, the C-9 Plasma Cannon sports nearly double the range and triple the stopping power thanks to the inventive Aja Net. Now with magnetic propulsion, targeting and swivel speed on the C-9 far outpace their predecessors!</h3>
             </div>
         </div>
         <div class="project">
-            <img src="" alt="">
+            <img src="img/DefaultUnit.png" alt="Regime L-8 Infantry NetBot">
             <div class="description">
-                <h3></h3>
+                <h3>The last model iteration used during the war on the Makers. These units have now been modified to fight for the Nets in the Annexation Campaigns. Rapid fire Photon-Repeaters may be weak alone, but are more than enough in droves!</h3>
             </div>
         </div>
         <div class="project">
-            <img src="" alt="">
+            <img src="img/Heavy.png" alt="Regime L-9 Heavy NetBot">
             <div class="description">
-                <h3></h3>
+                <h3>An L-model built for the games by the SOAMO Net. The L-9 boasts higher strength, durability, and redundancy computers to ensure they can take a hit and keep on fighting. Their arsenal sports a new "Breaker" cannon that fires a volatile and irradiated shell that ionizes the air around it for plasma explosions the riddle enemy defenses!</h3>
             </div>
         </div>
     </section>
@@ -44,10 +52,10 @@
     <section id="reviews">
         <h2>Reviews</h2>
         <div class="review">
-            <div class="name"></div>
-            <div class="title"></div>
-            <div class="rating"></div>
-            <div class="content"></div>
+            <div class="name">Sojour</div>
+            <div class="title">Euro Admin</div>
+            <div class="rating">★★★★★</div>
+            <div class="content">lorem ipsum</div>
         </div>
         <div class="review">
             <div class="name"></div>
@@ -65,7 +73,7 @@
 
 </main>
 <footer>
-    &copy; 2024 Your Name Here
+    &copy;2025 - Christopher Urban
 </footer>
 
 </body>
