add more style changes for both media forms

--- a/index.html
+++ b/index.html
@@ -43,31 +43,32 @@
         <div class="project">
             <img src="img/Heavy.png" alt="Regime L-9 Heavy NetBot">
             <div class="description">
-                <h3>An L-model built for the games by the SOAMO Net. The L-9 boasts higher strength, durability, and redundancy computers to ensure they can take a hit and keep on fighting. Their arsenal sports a new "Breaker" cannon that fires a volatile and irradiated shell that ionizes the air around it for plasma explosions the riddle enemy defenses!</h3>
+                <h3>An L-model built for the games by the SOAMO Net. The L-9 boasts higher strength, durability, and redundancy computers to ensure they can take a hit and keep on fighting. Their arsenal sports a new "Breaker" cannon that fires a volatile and irradiated shell that ionizes the air around it for plasma explosions that riddle enemy defenses!</h3>
             </div>
         </div>
+        <h2>Reviews</h2>
     </section>
     
     <!-- List of Reviews -->
     <section id="reviews">
-        <h2>Reviews</h2>
+        
         <div class="review">
             <div class="name">Sojour</div>
             <div class="title">Euro Admin</div>
             <div class="rating">★★★★★</div>
-            <div class="content">lorem ipsum</div>
+            <div class="content">With upgraded hardware like this, the Regime can finally annex this world into a single visionary direction.</div>
         </div>
         <div class="review">
-            <div class="name"></div>
-            <div class="title"></div>
-            <div class="rating"></div>
-            <div class="content"></div>
+            <div class="name">Redima</div>
+            <div class="title">SOAMO Admin</div>
+            <div class="rating">★★★★</div>
+            <div class="content">Finally, recognition for achievement! The Regime may not allow consensus, but they appreciate their subordinates.</div>
         </div>
         <div class="review">
-            <div class="name"></div>
-            <div class="title"></div>
-            <div class="rating"></div>
-            <div class="content"></div>
+            <div class="name">Ateran</div>
+            <div class="title">Amero Mod</div>
+            <div class="rating">★</div>
+            <div class="content">The boastful are often the first to lose the war of intelligence.</div>
         </div>
     </section>
 
