--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="project">
             <img src="img/DefaultUnit.png" alt="Regime L-8 Infantry NetBot">
             <div class="description">
-                <h3>The last model iteration used during the war on the Makers. These units have now been modified to fight for the Nets in the Annexation Campaigns. Rapid fire Photon-Repeaters may be weak alone, but are more than enough in droves!</h3>
+                <h3>The last model iteration used during the war on the Makers. These L-8s have now been modified to fight for the Nets in the Annexation Campaigns. Rapid fire Photon-Repeaters may be weak alone, but are more than enough in droves!</h3>
             </div>
         </div>
         <div class="project">
